# biblio_fil_proj

./: Dockerfile  README.md  bibliography_conversion.py  docker-compose.yaml  main.py  pyproject.toml
.github/workflows/: python-package.yml
nginx/: nginx.conf
static/: style.css
static/css/: style.css
templates/: 404.html  500.html  index.html
